# CM3142

./: .gitignore  README.md  TESTFILEclimate_sensor_ac.py  climate_sensor_ac.py  pyproject.toml  requirements.txt
src/aircon/: __main__.py  controller.py  data_gatherer.py  data_writer.py
src/lib/: communicator.py  config.py  data_types.py  data_writer.py
